# TCPComm

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  TCPComm.fun  TCPCommManage.c  TCPCommReceive.c  TCPCommSend.c  TCPConnectionMgr.typ
.github/workflows/: build-export-publish.yml  build.yml
example/AsProject/: AsProject.apj  README.md  package-lock.json  package.json
example/AsProject/Logical/: Package.pkg
example/AsProject/Logical/Libraries/: Package.pkg
example/AsProject/Logical/Libraries/Loupe/: Package.pkg
example/AsProject/Logical/Libraries/Motion/: Package.pkg
example/AsProject/Logical/Libraries/Motion/Acp10_MC/: binary.lby
example/AsProject/Logical/Libraries/Motion/Acp10man/: Acp10err-de.txt  Acp10err-en.txt  Acp10par-de.txt  Acp10par-en.txt  Binary.lby
example/AsProject/Logical/Libraries/Motion/Acp10par/: Acp10par.var  Binary.lby
example/AsProject/Logical/Libraries/_AS/: Package.pkg
example/AsProject/Logical/Programs/: Package.pkg
example/AsProject/Logical/Programs/Default/: Main.c
example/AsProject/Physical/: Physical.pkg
example/AsProject/Physical/ARM/: Config.pkg  Hardware.hw  Hardware.hwl
example/AsProject/Physical/ARM/X20CP0410/: Cpu.pkg  Cpu.sw
example/AsProject/Physical/ARM/X20CP0484/: Cpu.pkg  Cpu.sw
example/AsProject/Physical/Intel/: Config.pkg  Hardware.hw
example/AsProject/Physical/Intel/5APC4100_TGL1_000/: Cpu.pkg  Cpu.sw
example/AsProject/Physical/Intel/5PC900_TS17_04/: Cpu.pkg  Cpu.sw
src/Ar/TCPComm/: ANSIC.lby  CHANGELOG.md  TCPComm.var  TCPCommReceive.c  package.json
(+170 files in other folders)
